Fix more spacing

--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,6 @@ html {
   font-family: Bitter, serif;
 }
 
-.img-flex {
-  width: 100%;
-  display: block;
-}
-
 .logo-text,
 .pricing-head {
   font-family: "Roboto", sans-serif;
